--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,8 +12,8 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
-
+    # runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
