--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: crud-users
 type: Opaque
 stringData:
-  SPRING_DATASOURCE_URL: "jdbc:postgresql://postgresql.postgresql.svc.cluster.local:5432/postgres"
+  SPRING_DATASOURCE_URL: "jdbc:postgresql://postgresql.database.svc.cluster.local:5432/postgres"
   SPRING_DATASOURCE_USERNAME: "postgres"
-  SPRING_DATASOURCE_PASSWORD: "kz1Ix8YYc8"
+  SPRING_DATASOURCE_PASSWORD: "36FMYk3CMU"
   SPRING_JPA_HIBERNATE_DDL_AUTO: "update"
