--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: DevOps-Flow/actions
-        path: ./actionTools
+        path: ./actionsTools
     - name: Maven Build
       uses: ./actionsTools/build
       with:
