Implemented Liveness and Readiness probes

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -55,10 +55,22 @@ spec:
     spec:
       containers:
         - name: crud-api
-          image: harbor.lab.int/crud-users/crud-users-api:1.0.0
+          image: harbor.lab.int/crud-users/crud-users-api:2.0.0
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
+          livenessProbe:
+            httpGet:
+              path: /actuator/health/liveness
+              port: 8080
+            initialDelaySeconds: 30
+            periodSeconds: 10
+          readinessProbe:
+              httpGet:
+                path: /actuator/health/readiness
+                port: 8080
+              initialDelaySeconds: 30
+              periodSeconds: 10
           env:
             - name: SPRING_DATASOURCE_URL
               valueFrom:
