--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+logging.level.web=DEBUG
+management.endpoint.health.probes.enabled=true
+spring.devtools.add-properties=false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+server.port=8080
